Fixed some erratums in MoveProvider. Fixed ZIndex issue in movement animation.   Added events to ChessBoard control and changed a bit logic with inner moves provider.

--- a/ChessProgram/ChessBoardTest/ChessBoardTest.csproj
+++ b/ChessProgram/ChessBoardTest/ChessBoardTest.csproj
@@ -82,6 +82,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PlayerMoveEvent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
