--- a/ChessProgram/DebutMovesHolder/DebutMovesHolder.csproj
+++ b/ChessProgram/DebutMovesHolder/DebutMovesHolder.csproj
@@ -9,11 +9,12 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>DebutMovesHolder</RootNamespace>
     <AssemblyName>DebutMovesHolder</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
     <OldToolsVersion>3.5</OldToolsVersion>
     <UpgradeBackupLocation />
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
@@ -51,6 +52,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="bin\simple_debut_moves" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
