--- a/ChessProgram/XMLProperties/XMLProperties.csproj
+++ b/ChessProgram/XMLProperties/XMLProperties.csproj
@@ -9,11 +9,12 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>XMLProperties</RootNamespace>
     <AssemblyName>XMLProperties</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
     <OldToolsVersion>3.5</OldToolsVersion>
     <UpgradeBackupLocation />
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
@@ -43,6 +44,7 @@
     <Compile Include="PropertiesClasses.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="figures_pictures.xml" />
     <None Include="internet_options.xml" />
     <None Include="players.xml" />
