--- a/ChessProgram/ChessBoardTest/ChessBoardTest.csproj
+++ b/ChessProgram/ChessBoardTest/ChessBoardTest.csproj
@@ -40,13 +40,9 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="System.Xaml">
-      <RequiredTargetFramework>4.0</RequiredTargetFramework>
-    </Reference>
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
@@ -113,6 +109,10 @@
     <ProjectReference Include="..\BasicChessClasses\BasicChessClasses.csproj">
       <Project>{E4485A2E-85DF-4528-9E14-4CB306812C34}</Project>
       <Name>BasicChessClasses</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\QueemAI\QueemAI.csproj">
+      <Project>{41156AC3-E6DE-45E9-8E07-6B771E9FF43F}</Project>
+      <Name>QueemAI</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup />
