--- a/ChessProgram/QueemAI/QueemAI.csproj
+++ b/ChessProgram/QueemAI/QueemAI.csproj
@@ -41,9 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ChessPromotionMove.cs" />
     <Compile Include="ChessSolver.cs" />
+    <Compile Include="ChessSolver_Stuff.cs" />
     <Compile Include="CH_MovesProvider.cs" />
+    <Compile Include="EvaluatedMove.cs" />
     <Compile Include="PositionEvaluator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
