--- a/ChessProgram/QueemAI/QueemAI.csproj
+++ b/ChessProgram/QueemAI/QueemAI.csproj
@@ -48,6 +48,7 @@
     <Compile Include="MovesGenerator.cs" />
     <Compile Include="PositionEvaluator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TranspositionTable.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BasicChessClasses\BasicChessClasses.csproj">
