--- a/ChessProgram/BitBoardTests/BitBoardTests.csproj
+++ b/ChessProgram/BitBoardTests/BitBoardTests.csproj
@@ -36,6 +36,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BitBoardTest.cs" />
+    <Compile Include="RookBitBoardTest.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
