--- a/ChessProgram/QueemTests/Queem.Tests.csproj
+++ b/ChessProgram/QueemTests/Queem.Tests.csproj
@@ -10,7 +10,6 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>QueemTests</RootNamespace>
     <AssemblyName>QueemTests</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -31,29 +30,19 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework, Version=2.5.9.10348, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL" />
-    <Reference Include="System" />
+    <Reference Include="nunit.core, Version=2.4.8.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77">
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="nunit.framework, Version=2.4.8.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77">
+      <Private>False</Private>
+    </Reference>
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
+    <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CoordinatesTests.cs" />
-    <Compile Include="FigureCollectionTest.cs" />
-    <Compile Include="MovesTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\BasicChessClasses\BasicChessClasses.csproj">
-      <Project>{E4485A2E-85DF-4528-9E14-4CB306812C34}</Project>
-      <Name>BasicChessClasses</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\QueemAI\Queem.AI.csproj">
-      <Project>{41156AC3-E6DE-45E9-8E07-6B771E9FF43F}</Project>
-      <Name>Queem.AI</Name>
-    </ProjectReference>
+    <Compile Include="RookBitBoardTest.cs" />
+    <Compile Include="BitBoardTest.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
@@ -63,4 +52,10 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <ItemGroup>
+    <ProjectReference Include="..\QueemCore\Queem.Core.csproj">
+      <Project>{5E1A8EB0-4749-426D-95A6-50A72CABF9D3}</Project>
+      <Name>Queem.Core</Name>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
