Added byte and short reversing and tests.

--- a/ChessProgram/QueemCore/Queem.Core.csproj
+++ b/ChessProgram/QueemCore/Queem.Core.csproj
@@ -52,6 +52,7 @@
     <Compile Include="BitBoardHelpers\KnightsBoardHelper.cs" />
     <Compile Include="BitBoardHelpers\PawnBitBoardHelper.cs" />
     <Compile Include="BitBoardHelpers\RookBitBoardHelper.cs" />
+    <Compile Include="Int64Helper.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
