--- a/ChessProgram/QueemTests/Queem.Tests.csproj
+++ b/ChessProgram/QueemTests/Queem.Tests.csproj
@@ -44,6 +44,7 @@
     <Compile Include="RookBitBoardTest.cs" />
     <Compile Include="BitBoardTest.cs" />
     <Compile Include="KnightBitBoardTest.cs" />
+    <Compile Include="Int64HelperTest.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
