Added queen tests. Fixed rook tests (new interface)

--- a/ChessProgram/QueemTests/Queem.Tests.csproj
+++ b/ChessProgram/QueemTests/Queem.Tests.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Int64HelperTest.cs" />
     <Compile Include="BishopDiagonalBitBoardTest.cs" />
     <Compile Include="AntiDiagonalBitboardTest.cs" />
+    <Compile Include="QueenTests.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
