--- a/ChessProgram/QueemTests/Queem.Tests.csproj
+++ b/ChessProgram/QueemTests/Queem.Tests.csproj
@@ -48,6 +48,7 @@
     <Compile Include="BishopDiagonalBitBoardTest.cs" />
     <Compile Include="AntiDiagonalBitboardTest.cs" />
     <Compile Include="QueenTests.cs" />
+    <Compile Include="PawnsTest.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
