Moves attacks generation to separate classes. Create general classes for two- and one-piece bitboard

--- a/ChessProgram/QueemCore/Queem.Core.csproj
+++ b/ChessProgram/QueemCore/Queem.Core.csproj
@@ -53,9 +53,16 @@
     <Compile Include="Int64Helper.cs" />
     <Compile Include="BitBoard\BitBoardSerializer.cs" />
     <Compile Include="BitBoard\QueenBitBoard.cs" />
-    <Compile Include="BitBoardHelpers\QueenBitBoardHelper.cs" />
     <Compile Include="Constants\BasicEnums.cs" />
     <Compile Include="Constants\Enumerations.cs" />
+    <Compile Include="BitBoard\TwoPiecesBitBoard.cs" />
+    <Compile Include="MoveProviders\MovesProvider.cs" />
+    <Compile Include="MoveProviders\KnightMovesProvider.cs" />
+    <Compile Include="MoveProviders\BishopMovesProvider.cs" />
+    <Compile Include="MoveProviders\RookMovesProvider.cs" />
+    <Compile Include="MoveProviders\QueenMovesProvider.cs" />
+    <Compile Include="BitBoard\OnePieceBitBoard.cs" />
+    <Compile Include="MoveProviders\KingMovesProvider.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -63,5 +70,6 @@
     <Folder Include="BitBoard\" />
     <Folder Include="BitBoardHelpers\" />
     <Folder Include="Constants\" />
+    <Folder Include="MoveProviders\" />
   </ItemGroup>
 </Project>
