Improved serialization. Added tests for serialization

--- a/ChessProgram/QueemTests/Queem.Tests.csproj
+++ b/ChessProgram/QueemTests/Queem.Tests.csproj
@@ -49,6 +49,7 @@
     <Compile Include="AntiDiagonalBitboardTest.cs" />
     <Compile Include="QueenTests.cs" />
     <Compile Include="PawnsTest.cs" />
+    <Compile Include="SerializationTests.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
