--- a/ChessProgram/QueemCore/Queem.Core.csproj
+++ b/ChessProgram/QueemCore/Queem.Core.csproj
@@ -67,6 +67,7 @@
     <Compile Include="AttacksGenerators\AttacksGeneratorFactory.cs" />
     <Compile Include="MovesGenerators\MovesGenerator.cs" />
     <Compile Include="MovesGenerators\MovesGeneratorFactory.cs" />
+    <Compile Include="MovesGenerators\PawnMovesGenerator.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
