Fixed gui build errors

--- a/ChessProgram/ChessBoardTest/ChessBoardTest.csproj
+++ b/ChessProgram/ChessBoardTest/ChessBoardTest.csproj
@@ -106,17 +106,21 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\BasicChessClasses\BasicChessClasses.csproj">
-      <Project>{E4485A2E-85DF-4528-9E14-4CB306812C34}</Project>
-      <Name>BasicChessClasses</Name>
-    </ProjectReference>
     <ProjectReference Include="..\DebutMovesHolder\DebutMovesHolder.csproj">
       <Project>{798AAC57-A4F3-4084-A8F8-8B5C6C3DD8A1}</Project>
       <Name>DebutMovesHolder</Name>
     </ProjectReference>
-    <ProjectReference Include="..\QueemAI\QueemAI.csproj">
-      <Project>{41156AC3-E6DE-45E9-8E07-6B771E9FF43F}</Project>
-      <Name>QueemAI</Name>
+    <ProjectReference Include="..\Queem.AI\Queem.AI.csproj">
+      <Project>{E94ED089-692E-411E-943D-2EB3E4304E87}</Project>
+      <Name>Queem.AI</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Queem.CoreInterface\Queem.CoreInterface.csproj">
+      <Project>{FD83AA55-A614-435F-9A0A-79CEBC26BEEA}</Project>
+      <Name>Queem.CoreInterface</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\QueemCore\Queem.Core.csproj">
+      <Project>{5E1A8EB0-4749-426D-95A6-50A72CABF9D3}</Project>
+      <Name>Queem.Core</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup />
