--- a/ChessProgram/ChessBoardVisualTest/ChessBoardVisualTest.csproj
+++ b/ChessProgram/ChessBoardVisualTest/ChessBoardVisualTest.csproj
@@ -95,6 +95,10 @@
       <Project>{E0345AB8-3057-48BE-8A25-98F94B3A2A2B}</Project>
       <Name>ChessBoardVisualLib</Name>
     </ProjectReference>
+    <ProjectReference Include="..\QueemCore\Queem.Core.csproj">
+      <Project>{5E1A8EB0-4749-426D-95A6-50A72CABF9D3}</Project>
+      <Name>Queem.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
