--- a/ChessProgram/ChessBoardLib/ChessBoardVisualLib.csproj
+++ b/ChessProgram/ChessBoardLib/ChessBoardVisualLib.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Controls\SquareContainer.cs" />
     <Compile Include="Converters\DictionaryValueConverter.cs" />
+    <Compile Include="Enums\Enums.cs" />
     <Compile Include="ViewModel\ChessBoardViewModel.cs" />
     <Compile Include="ViewModel\ObservableObject.cs" />
     <Compile Include="ViewModel\SquareItem.cs" />
@@ -61,10 +62,6 @@
     <Page Include="View\ChessBoardControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Resources\ChessFiguresDictionary.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
   <ItemGroup>
