--- a/ChessProgram/ChessBoardLib/ChessBoardVisualLib.csproj
+++ b/ChessProgram/ChessBoardLib/ChessBoardVisualLib.csproj
@@ -48,6 +48,8 @@
     <Compile Include="Converters\DictionaryValueConverter.cs" />
     <Compile Include="Converters\DummyConverter.cs" />
     <Compile Include="Converters\FigureToGridLengthConverter.cs" />
+    <Compile Include="Converters\MoveToDeltaXConverter.cs" />
+    <Compile Include="Converters\MoveToDeltaYConverter.cs" />
     <Compile Include="Enums\Enums.cs" />
     <Compile Include="ViewModel\ChessBoardViewModel.cs" />
     <Compile Include="ViewModel\ObservableObject.cs" />
