--- a/ChessProgram/ChessBoardLib/ChessBoardVisualLib.csproj
+++ b/ChessProgram/ChessBoardLib/ChessBoardVisualLib.csproj
@@ -51,6 +51,8 @@
     <Compile Include="Converters\MoveToDeltaXConverter.cs" />
     <Compile Include="Converters\MoveToDeltaYConverter.cs" />
     <Compile Include="Enums\Enums.cs" />
+    <Compile Include="Proxy.cs" />
+    <Compile Include="ViewModel\AnimationValue.cs" />
     <Compile Include="ViewModel\ChessBoardViewModel.cs" />
     <Compile Include="ViewModel\ObservableObject.cs" />
     <Compile Include="ViewModel\SquareItem.cs" />
