--- a/ChessProgram/QueemCore/Queem.Core.csproj
+++ b/ChessProgram/QueemCore/Queem.Core.csproj
@@ -36,6 +36,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
+    <Compile Include="Extensions\PawnPromotionExtension.cs" />
     <Compile Include="Move.cs" />
     <Compile Include="Extensions\MyStringExtensions.cs" />
     <Compile Include="BitBoards\BitBoard.cs" />
